fixed overflow-x issue

--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -835,6 +835,7 @@ body {
   font-size: 100%;
   color: #EfE8E1;
   background-color: #333233;
+  overflow-x: hidden;
 }
 
 a {
